<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Interface_VFinale</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="maintitre">Menu Robot</string>
    <string name="modemanu">Mode Manuel</string>
    <string name="modeauto">Mode Autonome</string>
    <string name="demarrer">Démarrer</string>
    <string name="modegps">Mode GPS</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_mode_manu">ModeManu</string>
    <string name="title_activity_mode_auto">ModeAuto</string>
    <string name="Prochainement">Prochainement</string>
    <string name="title_activity_mode_gps">ModeGPS</string>
    <string name="connexion">Connexion</string>
    <string name="nbDef">0</string>
    <string name="captavg">Capteur Avant Gauche</string>
    <string name="captultra">Capteur Ultrasons</string>
    <string name="captavdroit">Capteur Avant Droit</string>
    <string name="captarriere">Capteur Arriere</string>
    <string name="modeServer">Mode Serveur</string>
    <string name="title_activity_mode_server">Mode Serveur</string>
    <string name="debut">Démarrer</string>
    <string name="mMot">Stop</string>
    <string name="m_latitudeDest">0</string>
    <string name="m_longitudeDest">0</string>

</resources>
