<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.interface_capteur.MainActivity" 
    android:background="@drawable/status_bar_background"
    >

    <TextView
        android:id="@+id/textTitre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/modeauto"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#0099CC" />

    <Button
        android:id="@+id/buttonDemarre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:text="@string/debut" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textTitre"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:text="@string/connexion"
        android:textColor="#FFFFFF" />

</RelativeLayout>