<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/status_bar_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.interface_vfinale.ModeGPS" >

    <TextView
        android:id="@+id/textViewLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="36dp"
        android:text="Latitude :" />

    <TextView
        android:id="@+id/longitudeactuelle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewLong"
        android:layout_alignBottom="@+id/textViewLong"
        android:layout_alignLeft="@+id/TxtLat"
        android:text="@string/m_latitudeDest" />

    <TextView
        android:id="@+id/orient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:text="@string/m_longitudeDest" />

    <TextView
        android:id="@+id/textViewLong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/textViewLat"
        android:layout_marginTop="17dp"
        android:text="Longitude : " />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewLat"
        android:layout_below="@+id/textViewLong"
        android:layout_marginTop="18dp"
        android:text="Orientation :" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TxtLat"
        android:layout_alignBottom="@+id/TxtLat"
        android:layout_alignRight="@+id/textView1"
        android:text="Latitude "
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btMot"
        android:layout_below="@+id/btConnect"
        android:text="Destination :"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/TxtLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TxtLong"
        android:layout_alignRight="@+id/TxtLong"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="number|numberDecimal"
        android:text="@string/m_latitudeDest" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/latitudeactuelle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewLat"
        android:layout_alignBottom="@+id/textViewLat"
        android:layout_alignLeft="@+id/btConnect"
        android:text="@string/m_latitudeDest" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/TxtLat"
        android:layout_marginTop="37dp"
        android:text="Longitude"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btMot"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="OnClick"
        android:text="@string/mMot"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/TxtLong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView3"
        android:layout_toRightOf="@+id/orient"
        android:ems="10"
        android:inputType="number|numberDecimal"
        android:text="@string/m_longitudeDest" />

    <Button
        android:id="@+id/btConnect"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btDebut"
        android:layout_below="@+id/orient"
        android:layout_marginLeft="16dp"
        android:onClick="onClick"
        android:text="Connect" />

    <Button
        android:id="@+id/btDebut"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btMot"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:text="@string/debut" />

</RelativeLayout>